Greet user with first name
using the auth object we grabbed the current user's displayName property whenever the onAuthStateChange observer sees a log in

--- a/index.css
+++ b/index.css
@@ -39,8 +39,13 @@ body {
 
 /* === Typography === */
 
-h1 {
+h1,
+h2 {
 	margin: 0;
+}
+
+h2 {
+	font-weight: 500;
 }
 
 .app-title {
@@ -75,6 +80,10 @@ section {
 	height: 3.75em;
 	border-radius: 100%;
 	border: var(--border-width) solid var(--dark-color);
+}
+
+.user-section h2 {
+	font-size: 1.2em;
 }
 
 /* === Nav === */
