Adding mood emojis to record mood value

--- a/index.css
+++ b/index.css
@@ -86,6 +86,49 @@ section {
 	font-size: 1.2em;
 }
 
+/* === Post Section === */
+
+.post-section {
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+}
+
+/* == Post Section - Mood Emojis == */
+
+.mood-emojis {
+	display: flex;
+}
+
+.mood-emoji-btn {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-size: 0.8em;
+	gap: 0.3em;
+	background-color: transparent;
+	border: 0;
+}
+
+.mood-emoji-btn:hover {
+	transform: scale(1.2);
+}
+
+.mood-emoji-btn img {
+	width: 3.1em;
+	height: 3.1em;
+}
+
+.selected-emoji {
+	transform: scale(1.2);
+	opacity: 1;
+}
+
+.unselected-emoji {
+	transform: scale(1);
+	opacity: 0.5;
+}
+
 /* === Nav === */
 
 nav {
