--- a/index.css
+++ b/index.css
@@ -1,31 +1,31 @@
 :root {
-	--primary-color: #ffde00;
-	--primary-light-color: #ffe769;
-	--secondary-color: #ffe4ba;
-	--secondary-light-color: #fff6e8;
-	--post-color: #62eea8;
-	--delete-color: #ff9f9f;
-	--light-color: #fffefc;
-	--grey-color: #747e79;
+	--primary-color: #FFDE00;
+	--primary-light-color: #FFE769;
+	--secondary-color: #FFE4BA;
+	--secondary-light-color: #FFF6E8;
+	--post-color: #62EEA8;
+	--delete-color: #FF9F9F;
+	--light-color: #FFFEFC;
+	--grey-color: #747E79;
 	--dark-color: #000000;
+	--white-color: #FFFEFC;
 
-	--primary-font: "Cabin", sans-serif;
-	--seconday-font: "Calistoga", sans-serif;
-
+	--primary-font: 'Cabin', sans-serif;
+	--seconday-font: 'Calistoga', sans-serif;
+	
 	--border-width: 3px;
 	--element-border-radius: 5px;
-
+	
 	--button-height: 5px;
-
+	
 	--small-button-height: 2px;
-
+	
 	--element-padding: 0.8em;
-
+	
 	--maximum-width: 320px;
 }
 
-html,
-body {
+html, body {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
@@ -39,15 +39,11 @@ body {
 
 /* === Typography === */
 
-h1,
-h2,
-h3,
-p {
+h1, h2, h3, p {
 	margin: 0;
 }
 
-h2,
-h3 {
+h2, h3 {
 	font-weight: 500;
 }
 
@@ -138,8 +134,41 @@ section {
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-	margin-bottom: 1.8em;
+margin-bottom: 1.8em;
 }
+
+/* == Posts Section - Filters == */
+
+.filters-and-posts-section {
+	margin-top: 1em;
+	display: flex;
+	flex-direction: column;
+	gap: 0.6em;
+}
+
+.filters-section {
+	display: flex;
+	gap: 0.4em;
+}
+
+.filter-btn {
+	color: var(--dark-color);
+	font-size: 0.9em;
+	padding: 0.3em;
+	background-color: transparent;
+}
+
+.selected-filter {
+	color: var(--white-color);
+	background-color: var(--dark-color);
+}
+
+.unselected-filter {
+	color: var(--dark-color);
+	background-color: var(--white-color);
+}
+
+/* == Posts Section - Posts == */
 
 .post {
 	display: flex;
@@ -147,7 +176,7 @@ section {
 	background-color: var(--secondary-color);
 	padding: 0.8em;
 	border-radius: var(--element-border-radius);
-	gap: 0.4rem;
+	gap: 0.4em;
 }
 
 .post .header {
@@ -201,9 +230,7 @@ nav {
 
 /* === Common for elements === */
 
-input,
-button,
-textarea {
+input, button, textarea {
 	font-family: inherit;
 	padding: var(--element-padding);
 	border-radius: var(--element-border-radius);
@@ -211,16 +238,13 @@ textarea {
 	box-sizing: border-box;
 }
 
-input,
-button {
+input, button {
 	font-size: 1.1em;
 	text-align: center;
 	border: var(--border-width) solid var(--dark-color);
 }
 
-input:focus,
-button:focus,
-textarea:focus {
+input:focus, button:focus, textarea:focus {
 	outline: none;
 }
 
@@ -229,24 +253,21 @@ textarea:focus {
 textarea {
 	font-size: 1em;
 	border: 0;
-	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.25);
+	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, .25);
 	resize: none;
 	height: 6em;
 }
 
-textarea::placeholder {
-	/* Chrome, Firefox, Opera, Safari 10.1+ */
+textarea::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: var(--grey-color);
 	opacity: 1; /* Firefox */
 }
 
-textarea:-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
+textarea:-ms-input-placeholder { /* Internet Explorer 10-11 */
 	color: var(--grey-color);
 }
 
-textarea::-ms-input-placeholder {
-	/* Microsoft Edge */
+textarea::-ms-input-placeholder { /* Microsoft Edge */
 	color: var(--grey-color);
 }
 
@@ -254,19 +275,16 @@ input {
 	font-weight: 300;
 }
 
-input::placeholder {
-	/* Chrome, Firefox, Opera, Safari 10.1+ */
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: var(--grey-color);
 	opacity: 1; /* Firefox */
 }
 
-input:-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
+input:-ms-input-placeholder { /* Internet Explorer 10-11 */
 	color: var(--grey-color);
 }
 
-input::-ms-input-placeholder {
-	/* Microsoft Edge */
+input::-ms-input-placeholder { /* Microsoft Edge */
 	color: var(--grey-color);
 }
 
@@ -310,12 +328,12 @@ button:hover {
 	align-items: center;
 	gap: 0.5em;
 	border: 0;
-	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.25);
+	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, .25);
 }
 
 .provider-btn:hover {
 	transition: all 0.2s ease;
-	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25);
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, .25);
 }
 
 .google-btn-logo {
