--- a/index.css
+++ b/index.css
@@ -1,31 +1,32 @@
 :root {
-	--primary-color: #FFDE00;
-	--primary-light-color: #FFE769;
-	--secondary-color: #FFE4BA;
-	--secondary-light-color: #FFF6E8;
-	--post-color: #62EEA8;
-	--delete-color: #FF9F9F;
-	--light-color: #FFFEFC;
-	--grey-color: #747E79;
+	--primary-color: #ffde00;
+	--primary-light-color: #ffe769;
+	--secondary-color: #ffe4ba;
+	--secondary-light-color: #fff6e8;
+	--post-color: #62eea8;
+	--delete-color: #ff9f9f;
+	--light-color: #fffefc;
+	--grey-color: #747e79;
 	--dark-color: #000000;
-	--white-color: #FFFEFC;
+	--white-color: #fffefc;
 
-	--primary-font: 'Cabin', sans-serif;
-	--seconday-font: 'Calistoga', sans-serif;
-	
+	--primary-font: "Cabin", sans-serif;
+	--seconday-font: "Calistoga", sans-serif;
+
 	--border-width: 3px;
 	--element-border-radius: 5px;
-	
+
 	--button-height: 5px;
-	
+
 	--small-button-height: 2px;
-	
+
 	--element-padding: 0.8em;
-	
+
 	--maximum-width: 320px;
 }
 
-html, body {
+html,
+body {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
@@ -39,11 +40,15 @@ body {
 
 /* === Typography === */
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
 	margin: 0;
 }
 
-h2, h3 {
+h2,
+h3 {
 	font-weight: 500;
 }
 
@@ -134,7 +139,7 @@ section {
 	display: flex;
 	flex-direction: column;
 	gap: 1em;
-margin-bottom: 1.8em;
+	margin-bottom: 1.8em;
 }
 
 /* == Posts Section - Filters == */
@@ -179,6 +184,8 @@ margin-bottom: 1.8em;
 	gap: 0.4em;
 }
 
+/* = Posts Section - Posts - Header = */
+
 .post .header {
 	display: flex;
 	justify-content: space-between;
@@ -194,9 +201,29 @@ margin-bottom: 1.8em;
 	height: 2em;
 }
 
+/* = Posts Section - Posts - Body = */
+
 .post p {
 	font-size: 0.9em;
 	line-height: 1.3em;
+}
+
+/* = Posts Section - Posts - Footer = */
+
+.post .footer button {
+	font-size: 0.9em;
+	padding: 0.2em 0.8em;
+	box-shadow: 0px var(--small-button-height) 0px 0px var(--dark-color);
+	position: relative;
+}
+
+.post .footer button:hover {
+	top: var(--small-button-height);
+	box-shadow: none;
+}
+
+.post .footer .edit-color {
+	background-color: var(--post-color);
 }
 
 /* === Nav === */
@@ -230,7 +257,9 @@ nav {
 
 /* === Common for elements === */
 
-input, button, textarea {
+input,
+button,
+textarea {
 	font-family: inherit;
 	padding: var(--element-padding);
 	border-radius: var(--element-border-radius);
@@ -238,13 +267,16 @@ input, button, textarea {
 	box-sizing: border-box;
 }
 
-input, button {
+input,
+button {
 	font-size: 1.1em;
 	text-align: center;
 	border: var(--border-width) solid var(--dark-color);
 }
 
-input:focus, button:focus, textarea:focus {
+input:focus,
+button:focus,
+textarea:focus {
 	outline: none;
 }
 
@@ -253,21 +285,24 @@ input:focus, button:focus, textarea:focus {
 textarea {
 	font-size: 1em;
 	border: 0;
-	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, .25);
+	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.25);
 	resize: none;
 	height: 6em;
 }
 
-textarea::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+textarea::placeholder {
+	/* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: var(--grey-color);
 	opacity: 1; /* Firefox */
 }
 
-textarea:-ms-input-placeholder { /* Internet Explorer 10-11 */
+textarea:-ms-input-placeholder {
+	/* Internet Explorer 10-11 */
 	color: var(--grey-color);
 }
 
-textarea::-ms-input-placeholder { /* Microsoft Edge */
+textarea::-ms-input-placeholder {
+	/* Microsoft Edge */
 	color: var(--grey-color);
 }
 
@@ -275,16 +310,19 @@ input {
 	font-weight: 300;
 }
 
-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+input::placeholder {
+	/* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: var(--grey-color);
 	opacity: 1; /* Firefox */
 }
 
-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+input:-ms-input-placeholder {
+	/* Internet Explorer 10-11 */
 	color: var(--grey-color);
 }
 
-input::-ms-input-placeholder { /* Microsoft Edge */
+input::-ms-input-placeholder {
+	/* Microsoft Edge */
 	color: var(--grey-color);
 }
 
@@ -328,12 +366,12 @@ button:hover {
 	align-items: center;
 	gap: 0.5em;
 	border: 0;
-	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, .25);
+	box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.25);
 }
 
 .provider-btn:hover {
 	transition: all 0.2s ease;
-	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, .25);
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
 .google-btn-logo {
